--- a/index.html
+++ b/index.html
@@ -1,14 +1,51 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+
+    <!-- Viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
-    <title>NIVOSTECH</title>
+
+    <!-- Title -->
+    <title>NIVOS TECH | Innovación y desarrollo tecnológico</title>
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+
+    <!-- PWA / Mobile -->
+    <meta name="apple-mobile-web-app-title" content="NIVOSTECH" />
+    <meta name="theme-color" content="#020617" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- SEO base -->
+    <meta
+      name="description"
+      content="NIVOS TECH ofrece soluciones tecnológicas: desarrollo web, innovación digital y servicios a la medida."
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph base -->
+    <meta property="og:title" content="NIVOS TECH" />
+    <meta
+      property="og:description"
+      content="Innovación, desarrollo web y soluciones tecnológicas a la medida."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.nivostech.com/" />
+    <meta property="og:image" content="https://www.nivostech.com/og-image.webp" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
