--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="canonical" href="https://www.nivostech.com/" />
 
     <!-- Title -->
-    <title>NIVOS TECH | Innovación y desarrollo tecnológico</title>
+    <title>NIVOSTECH | Innovación y desarrollo tecnológico</title>
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -26,15 +26,15 @@
     <!-- SEO base -->
     <meta
       name="description"
-      content="NIVOS TECH ofrece soluciones tecnológicas: desarrollo web, innovación digital y servicios a la medida."
+      content="NIVOSTECH ofrece soluciones tecnológicas: desarrollo web, innovación digital, redes sociales y servicios a la medida."
     />
     <meta name="robots" content="index, follow" />
 
     <!-- Open Graph base -->
-    <meta property="og:title" content="NIVOS TECH" />
+    <meta property="og:title" content="NIVOSTECH" />
     <meta
       property="og:description"
-      content="Innovación, desarrollo web y soluciones tecnológicas a la medida."
+      content="Innovación, desarrollo web, redes sociales y soluciones tecnológicas a la medida."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.nivostech.com/" />
@@ -45,10 +45,10 @@
 
     <!-- Twitter (recomendado) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="NIVOS TECH" />
+    <meta name="twitter:title" content="NIVOSTECH" />
     <meta
       name="twitter:description"
-      content="Innovación, desarrollo web y soluciones tecnológicas a la medida."
+      content="Innovación, desarrollo web, redes sociales y soluciones tecnológicas a la medida."
     />
     <meta
       name="twitter:image"
